// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWithStroke /> with default props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa cAeaNu k-TitleWithStroke k-TitleWithStroke--primary k-TitleWithStroke--align-left"
  style={
    Object {
      "--TitleWithStroke-css-color": null,
    }
  }
>
  <h1
    className="k-TitleWithStroke__title k-TitleWithStroke__title--primary"
  >
    Lorem ipsum dolor sit amet…
  </h1>
  <span
    className="k-TitleWithStroke__stroke k-TitleWithStroke__stroke--primary"
  />
</div>
`;

exports[`<TitleWithStroke /> with more props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa cAeaNu k-TitleWithStroke k-TitleWithStroke--tertiary k-TitleWithStroke--align-center k-TitleWithStroke--italic"
  style={
    Object {
      "--TitleWithStroke-css-color": "#444",
    }
  }
>
  <h4
    className="k-TitleWithStroke__title k-TitleWithStroke__title--tertiary"
  >
    Lorem ipsum dolor sit amet…
  </h4>
  <span
    className="k-TitleWithStroke__stroke k-TitleWithStroke__stroke--tertiary"
  />
</div>
`;
